# DHBW-Blickbox

./: README.md
ada/: Cargo.toml
ada/src/: main.rs
api+influxdb/: DataBaseAPI.py  Dockerfile  docker-compose.yaml
blickbox/ada/: .ada.service.kate-swp  .gitignore  Cargo.toml  Makefile.toml  ada.service  deploy.sh  install.sh  readme.md
blickbox/ada/.cargo/: config  config_1
blickbox/ada/src/: main.rs
blickbox/ada/src/communication/: http_request.rs  logging.rs  mod.rs
blickbox/ada/src/sara/: ble_weather_station.rs  mod.rs  weather_station.rs
blickbox/ada/src/sensor_modules/: dht_temp_hum.rs  mod.rs  weather_station.rs
blickbox/sara/: .gitignore  platformio.ini
client/: build.sh
client/valentin/: package-lock.json  package.json
client/valentin-v.0.1/: package-lock.json  package.json
deployment/: DataBaseAPI.py  README.md  docker-compose.yaml
docs/: .$ble_services.drawio.bkp  .$ble_services.drawio.dtmp  Schaltbild_SARA.fzz  ble_services.drawio
docs/Swagger/: BlickboxAPI.yaml  README.md
docs/arc42/: IoTarc42.aux  IoTarc42.fdb_latexmk  IoTarc42.fls  IoTarc42.tex  README.md
docs/c4/: 1. C4Context.txt  2. C4Container.txt  3. C4Componment (API).txt  C4ComponentAda.txt  C4Context.txt  IoTC4.json  README.md  erDiagram-sensordaten-datenhaltung.txt  flowdiagram-ada-main.txt
docs/fmea/: fmea.xlsx
docs/ressources/: ble_services.drawio
sara/: LICENSE  README.md  platformio.ini
sara/src/: main.cpp
server/: Blickbox.kdbx  README.md  docker-compose.yaml
server/client/: Dockerfile  build.sh  run.sh
server/deployment/: DataBaseAPI.py  (+2 more)
(+74 files in other folders)
